Fix overflow-y issue on home page

--- a/frontend/sass/pages/_home.scss
+++ b/frontend/sass/pages/_home.scss
@@ -8,6 +8,12 @@
 	& > * {
 		z-index: 1;
 	}
+
+	//this sets body to hide overflow for home page
+	&-page {
+		overflow-y: hidden;
+	}
+
 	// background-image: linear-gradient(
 	// 		to right,
 	// 		var(--color-primary-3) 0%,
@@ -94,7 +100,7 @@
 		font-weight: 900;
 		grid-column: 1/-1;
     font-size: $default-font-size * 1.5;
-		transform: translate(0, $default-font-size * 50);
+		transform: translate(0, 100vh);
 		animation: 
 			1.5s 1 translateToZero forwards $animation-easing-standard-easeInOutBack,
 		;
